<resources>
    <string name="app_name"></string>
    <string name="registerMovie">Register Movie</string>
    <string name="displayMovies">Display Movies</string>
    <string name="favourites">Favourites</string>
    <string name="editMovies">Edit Movie</string>
    <string name="search">Search</string>
    <string name="ratings">Ratings</string>
    <string name="save">Save</string>
    <string name="titileOne">Register Movie</string>
    <string name="movieTitle">Title of the movie : </string>
    <string name="editTxtMovieTitle">Enter movie title</string>
    <string name="theYear">The year : </string>
    <string name="editTxtMovieYear">Enter movie year</string>
    <string name="theDirector">The Director : </string>
    <string name="editTxtMovieDirector">Enter director</string>
    <string name="listOfActors">List of actors/actress : </string>
    <string name="editTxtMovieActors">Enter actors/actress : </string>
    <string name="ratingsLabel">Enter ratings : </string>
    <string name="review">Reviews : </string>
    <string name="editReview">Enter your reviews</string>
    <string name="button_name">Add to favourites</string>
    <string name="article_text"> </string>
    <string name="titleTwo">Display Movies</string>
    <string name="addToFvouritesBtn">Add to favourites</string>
    <string name="mainPgTitle">MovieFlix</string>
    <string name="titleThree">Favourite Movies</string>
    <string name="titleFour">Edit Movies</string>
    <string name="editBtn">Edit</string>
    <string name="updateBtn">Update</string>
    <string name="titleFive">Edit selected movie</string>
    <string name="favTxtView">Favorites : </string>
    <string name="favOrNotFav" />
    <string name="favourite">Favourite</string>
    <string name="not_favourite">Not Favourite</string>
    <string name="selectMovieTitle">Display All Movies</string>
    <string name="imdbBtn">Find movies in IMDB</string>
    <string name="imdbRating"></string>
    <string name="imgView">Movie Image</string>
    <string name="wait">Please Wait......</string>

</resources>